tests/baselines/reference/parser521128.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser521128.ts (2 errors) ====
    module.module { }
                  ~
!!! error TS1005: ';' expected.
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.